Overview of changes in Gnome2 1.042
===================================

* Support the sm-connect property in Gnome2::Program::init.

Overview of changes in Gnome2 1.041
===================================

* Fix a test failure.
* Fix a POD error.

Overview of changes in Gnome2 1.040
===================================

 Since 1.02x (the previous stable series)
 ----------------------------------------
  * Fix some test suite issues.

 Since 1.030
 -----------
  * Nada.

Overview of changes in Gnome2 1.030
===================================

* Fix some test issues.

Overview of changes in Gnome2 1.023
===================================

* Fix yet another test suite issue.

Overview of changes in Gnome2 1.022
===================================

* Fix some test suite issues.

Overview of changes in Gnome2 1.021
===================================

* Update some build infrastructure.
* "Fix" a test failure.

Overview of changes in Gnome2 1.020
===================================

 Since 1.001 (the previous stable series)
 ----------------------------------------
  * Many internal changes and fixes to the test suite.
  * Possibility to use construct-only properties with
    Gnome2::Program::init.
  * A Gnome2::enums page that lists all enums and their values.
  * API additions:
    - Some new things in GnomePasswordDialog.
    - Gnome2::AuthenticationManager::dialog_is_visible.
    - Gnome2::IconList::select_all.

 Since 1.014
 -----------
  * Nada.

Overview of changes in Gnome2 1.014
===================================

* Bind and test gnome_authentication_manager_dialog_is_visible.
* Generate a Gnome2::enums man page with all enum and flag values.
  [Kevin C. Krinke]

Overview of changes in Gnome2 1.013
===================================

* Make construct-only properties work when using Gnome2::Program::init.

Overview of changes in Gnome2 1.012
===================================

* Fix man small glitches in the test suite; add a new test for GnomeSound.